<resources>
    <string name="cusname">NAME</string>
    <string name="cusAddress">ADDRESS</string>
    <string name="i1"> NO. OF ITEMS</string>
    <string name="p1">PHONE NO.</string>
    <string name="t1">TOTAL</string>
    <string name="w1">Welcome</string>
    <string name="o1">ORDER</string>
    <string name="Login">Login</string>
    <string name="UserName">UserName</string>
    <string name="Password">Password</string>
    <string name="Login1">LOGIN</string>
    <string name="CantRemember">Can\'t Remember</string>
    <string name="d1">Don\'t Have An Account</string>
    <string name="r1">Register</string>
    <string name="r2">FirstName</string>
    <string name="r3">LastName</string>
    <string name="r4">Email</string>
    <string name="r5">Contact No</string>
    <string name="f1">Register</string>
    <string name="l1">Login</string>
    <string name="l2">Succesfully Register</string>
    <string name="h1">Reset Password</string>
    <string name="n1">Next</string>
    <string name="w2">Reset Password_</string>
    <string name="j1">REgister</string>
    <string name="a1">Answer</string>
    <string name="x1">Submit</string>
    <string name="q1">Reset Successfully</string>
    <string name="Log">Login</string>


    <string name="message_1">FeedBack</string>
    <string name="button">Send Feedback</string>
    <string name="message_2">Rate our app</string>
    <string name="message_3">Username</string>
    <string name="image_10">image4.jpg</string>
    <string name="cOrder">VIEW ORDERS</string>
    <string name="items">ITEMS</string>
    <string name="app_name">Order Food</string>
    <string name="Add">ADD</string>
    <string name="VehicaleNo">VehicaleNo</string>
    <string name="Lcnno">LiceneNo</string>
    <string name="empid">EmpID</string>
    <string name="title_activity_delivery_management">deliveryManagement</string>
    <string name="sub">Submit</string>
    <string name="vc">View Cart</string>
    <string name="start">ORDER FOOD</string>
    <string name="Email">Email</string>
    <string name="btn1menu">Submit</string>
    <string name="btn2menu">View Cart</string>
    <string name="cnoodles1">Chicken Noodles RS200/=</string>
    <string name="txtqty">Quantity</string>
    <string name="hintqty">Enter quantity</string>
    <string name="cnoodles2">Vegetable Noodles RS150/=</string>
    <string name="confirmbutton">Add to Cart</string>
    <string name="crice1">Chicken Rice RS200/=</string>
    <string name="nrice">Nasi Goreng RS350/=</string>
    <string name="ckoththu">Chicken Koththu RS250/=</string>
    <string name="chkoththu">Cheese Koththu RS350/=</string>
    <string name="cshorteat">Chicken Roll RS45/=</string>
    <string name="sshortbun">Sausage Bun RS40/=</string>
    <string name="pmethod">PAYMENT METHOD</string>
    <string name="oId">Order ID</string>
    <string name="paymentHint1">FULL NAME</string>
    <string name="paymentMobile">MOBILE</string>
    <string name="paymentCC">CASH/CARD</string>
    <string name="submit1">SUBMIT</string>
    <string name="resManager">Restaurant Manager</string>
    <string name="resName">Restaurant Name</string>
    <string name="resBranch">Branch</string>
    <string name="resAddress">Address</string>
    <string name="resTimeOpen">Open By</string>
    <string name="resTimeClose">Close By</string>
    <string name="resButtonAdd">Add Restaurant</string>
    <string name="showOrder">showOrder</string>
    <string name="btnAdmin">Admin</string>
    <string name="FeedBack">FEEDBACK</string>
    <string name="pDel">DELETE</string>
    <string name="aPaymenthead">MANAGE PAYMENTS</string>
    <string name="pAdminGet">Manage Payments</string>
    <string name="updatePayment">UPDATE</string>
    <string name="viewRes">View Restaurant</string>

    <string name="menunoodlesbtn">Noodles RS180 - RS250/=</string>
    <string name="menutxt2">Enter Type</string>
    <string name="menuhint">Enter food type</string>
    <string name="menuricedata">Rice RS150-RS300/=</string>
    <string name="menukoththudata2">Koththu RS180-RS250/=</string>
    <string name="menushortdata">Shorteat</string>
    <string name="Rupdate">Update</string>
    <string name="Rdelete">Delete</string>
    <string name="Rid">RID</string>

</resources>
